# TestLocust

./: .gitignore  README.md  pyproject.toml
src/stulocust/firstone/: locustfile.py
src/stulocust/firsttwo/: locustfile.py  locustfilehttpuser.py
