[project]
name = "l"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "tushanxing", email = "tushanxing1995@gmail.com"},
]
dependencies = [
    "locust>=2.37.6",
    "mimesis>=18.0.0",
    "locust-plugins>=4.7.0",
]
requires-python = ">3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
